--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
     <script src="js/scripts.js" type="text/javascript"></script>
-    <title></title>
+    <title>Track Suggester</title>
   </head>
 
-
   <body>
+    <div class="container">
+      <h1>What Track Should I take?</h1>
+      <h3>You can't predict the future, which can make coming to a decision about your own future pretty unnerving. <b>We're here to help!</b></h3>
 
+      <h4>Our best advice is not to worry too much about it - most modern programming languages have more similarities than differences, and Epicodus graduates often find themselves working in different languages than they studied in school.</h4>
+
+      <h4>That said, each language has found a bit of a niche, and depending on your interests, you might be attracted to one over another. Answer the next few simple questions/prompts and we'll make a suggestion based on your answers.</h4>
+
+<!-- FORM STARTS HERE -->
+      <div>
+        <form id="">
+          <label for""=></label>
+          <select >
+          </select>
+        </form>
+      </div>
+<!-- FORM ENDS HERE -->
+
+
+
+
+
+    </div>
   </body>
 </html>
