Add button to form.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 <!-- FORM STARTS HERE -->
       <div>
         <form id="">
-          <label for""=></label>
+          <label for""=>1. </label>
           <select >
           </select>
+
+          <button type="submit" class="button">Reveal my path!</button>
         </form>
       </div>
 <!-- FORM ENDS HERE -->
