Complete README.md

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <label for="corporation">2. What style company would you like to work for?</label>
           <div class="radio">
             <label>
-              <input type="radio" name="corporation" value="3">
+              <input type="radio" name="corporation" value="3" checked>
               Large, established company.
             </label>
           </div>
@@ -52,7 +52,7 @@
           <label for="build">3. Would you like to build:</label>
           <div class="radio">
             <label>
-              <input type="radio" name="build" value="6">
+              <input type="radio" name="build" value="6" checked>
               Applications
             </label>
           </div>
@@ -78,7 +78,7 @@
           <label for="hero">4. Who is your tech "hero"?</label>
           <div class="radio">
             <label>
-              <input type="radio" name="hero" value="10">
+              <input type="radio" name="hero" value="10" checked>
               <img src="img/BillGates.jpeg" alt="Bill Gates">
               Bill Gates
             </label>
@@ -111,7 +111,7 @@
         <label for="fingers">5. How many fingers am I holding up?</label>
         <div class="radio">
           <label>
-            <input type="radio" name="fingers" value="15">
+            <input type="radio" name="fingers" value="15" checked>
             0
           </label>
         </div>
@@ -133,28 +133,27 @@
       </div>
 <!-- FORM ENDS HERE -->
 
-<!--RESULT STARTS HERE-->
+<!--RESULT STARTS HERE. Per dev tools (sources), this is where breakpoint starts-->
       <div class="results">
-        <h3>I should learn:</h3>
         <ul>
-          <li id="c#"><span class="liLook">C#</span></li>
-            <p>C# is most popular among bigger established businesses, often for building internal software. Because it's been around for a long time and has the backing of Microsoft, it is one of the most in-demand languages in the job market. C# has also been going through a bit of a rebirth lately, with Microsoft open sourcing the language and surrounding platform, porting it to run on Mac and Linux, and incorporating many of the best features of other languages. If you like the idea of working for a larger company on business software, C# is a great choice.</p>
-          <li id="java"><span class="liLook">Java</span></li>
+          <li id="cSharp"><span class="liLook">I should learn: C#</span>
+            <p>C# is most popular among bigger established businesses, often for building internal software. Because it's been around for a long time and has the backing of Microsoft, it is I should learn: one of the most in-demand languages in the job market. C# has also been going through a bit of a rebirth lately, with Microsoft open sourcing the language and surrounding platform, porting it to run on Mac and Linux, and incorporating many of the best features of other languages. If you like the idea of working for a larger company on business software, C# is a great choice.</p>
+          </li>
+          <li id="java"><span class="liLook">I should learn: Java</span>
             <p>Java is also a favorite of enterprise companies, but its appeal is broader as well: it's one of the most popular of all programming languages, and it's used in everything from for high-performance processing to building Android user interfaces. Because Java has been very popular for a very long time and is used in so many applications, it is also a very high-demand language. If you're interested in working for an enterprise-level company, as an Android developer, or in high-performance applications, Java could be a good language to learn.</p>
-          <li id="php"><span class="liLook">PHP</span></li>
+          </li>
+          <li id="php"><span class="liLook">I should learn: PHP</span>
             <p>PHP is by far the most popular backend language today, with 80 percent of websites utilizing it 'server-side'. It is perhaps best known for it's use in content management systems like Wordpress, Drupal, and Joomla. But the versatility of the language and the frameworks it powers make employment options numerous and diverse. If you're keen to work for a fast paced agency that builds websites for lots of clients, or maintain the security and stability of a huge complex of government websites, or if you like the idea of building out small sites for brands, businesses, and organizations - In any of these cases, PHP would be a great way to go.</p>
-          <li id="ruby"><span class="liLook">Ruby</span></li>
+          </li>
+          <li id="ruby"><span class="liLook">I should learn: Ruby</span>
             <p>Ruby is a favorite language of developers building interactive web applications. If an app involves users creating accounts, entering information, and interacting with dynamic content, there's a good chance it is built with Ruby. Ruby became popular because the Rails framework, which is written with Ruby, simplified many of the common tasks associated with building web applications. It's most popular with startups and smaller companies who are looking to build their product quickly.</p>
-          <li id="design"><span class="liLook">CSS</span></li>
+          </li>
+          <li id="design"><span class="liLook">I should learn: CSS</span>
             <p>CSS is the language for describing the presentation of Web pages, including colors, layout, fonts, and other stylistic choices. It allows one to adapt the presentation to different types of devices, such as large screens, small screens, and printers. HTML — used for building the structure of the page — and CSS — used for the visual layout — are the two basic languages involved in the building of web pages and web applications.</p>
+          </li>
         </ul>
       </div>
 <!--RESULT STARTS HERE-->
-
-
-
-
-
 
     </div>
   </body>
