Nothing to commit. Note that I've been editing to troubleshoot and determine why this is not working as expected.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <form id="languageTrack">
           <div>
             <label for="gameInput">1. When you pick a game, do you choose it based on:</label>
-            <select class="form-control" id="gameInput">
-              <option value"1">Flavor - theme, design, layout. If it looks fun, it's probably fun.</option>
-              <option value"2">Game Design/Theory - what type of game is it (e.g. puzzle, resource management, co-op...)? I like understanding the rules to maximize my win strategy.</option>
+            <select class="form-control" id="inputGame">
+              <option value="1">Flavor - theme, design, layout. If it looks fun, it's probably fun.</option>
+              <option value="2">Game Design/Theory - what type of game is it (e.g. puzzle, resource management, co-op...)? I like understanding the rules to maximize my win strategy.</option>
             </select>
           </div>
 <br>
@@ -134,7 +134,7 @@
 <!-- FORM ENDS HERE -->
 
 <!--RESULT STARTS HERE. Per dev tools (sources), this is where breakpoint starts-->
-      <div class="results">
+      <div class="result">
         <ul>
           <li id="cSharp"><span class="liLook">I should learn: C#</span>
             <p>C# is most popular among bigger established businesses, often for building internal software. Because it's been around for a long time and has the backing of Microsoft, it is I should learn: one of the most in-demand languages in the job market. C# has also been going through a bit of a rebirth lately, with Microsoft open sourcing the language and surrounding platform, porting it to run on Mac and Linux, and incorporating many of the best features of other languages. If you like the idea of working for a larger company on business software, C# is a great choice.</p>
